--- a/.env
+++ b/.env
@@ -4,4 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:bcd127@localhost:3306/db_acme_filmes_turma_ba"
+# DATABASE_URL="mysql://root:bcd127@localhost:3306/db_acme_filmes_turma_ba"
+# DATABASE_URL="mysql://if0_36489483:bcd127@sql303.infinityfree.com:3306/if0_36489483_db_acme_filmes_turma_ba"
+# DATABASE_URL="mysql://adm:bcd@127!!@acme-filmes-ba.database.windows.net.mysql.database.azure.com:3306/db_acme_filmes_turma_ba"
+DATABASE_URL="mysql://sql10704582:Kmhe8Lgv98@sql10.freesqldatabase.com:3306/sql10704582"
