--- a/.env
+++ b/.env
@@ -6,4 +6,6 @@
 
 # DATABASE_URL="mysql://root:bcd127@localhost:3306/db_acme_filmes_turma_ba"
 
-DATABASE_URL="mysql://sql10704582:Kmhe8Lgv98@sql10.freesqldatabase.com:3306/sql10704582"
+# DATABASE_URL="mysql://sql10705283:K3sewjRNIb@sql10.freesqldatabase.com:3306/sql10705283"
+
+DATABASE_URL="mysql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:3306/${DB_NAME}"
