--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-# DATABASE_URL="mysql://root:bcd127@localhost:3306/db_acme_filmes_turma_ba"
+DATABASE_URL="mysql://root:bcd127@localhost:3306/db_acme_filmes_turma_ba"
 
 # DATABASE_URL="mysql://sql10705283:K3sewjRNIb@sql10.freesqldatabase.com:3306/sql10705283"
 
-DATABASE_URL="mysql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:3306/${DB_NAME}"
+# DATABASE_URL="mysql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:3306/${DB_NAME}"
